<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:background="@drawable/border_green"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/txt_mseTitle"
        style="@style/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/mltTitle" />

    <View
        android:id="@+id/txt_mseView"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/txt_mseTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#2E9AFE" />

    <LinearLayout
        android:id="@+id/layArrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_mseView"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mltArrival"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:gravity=""
            android:text="@string/arrival" />

        <EditText
            android:id="@+id/edtmltDate"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".4"
            android:inputType="date" />

        <ImageButton
            android:id="@+id/imgmltdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:onClick="selectDate"
            android:src="@drawable/calendar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layArrival"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mltcost"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:text="@string/cost" />

        <EditText
            android:id="@+id/edtmltCost"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layCost"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mltdesc"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:text="@string/desc" />

        <EditText
            android:id="@+id/edtmltDesc"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mltScanType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layDesc"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_mlt_Search"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight=".15"
            android:gravity="center"
            android:hint="@string/scan" />

        <RadioGroup
            android:id="@+id/radioImpBasedOn"
            style="@style/RadioButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_Item_Num"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:button="@drawable/radiobutton_selector"
                android:checked="true"
                  android:drawablePadding="50dp"
    			android:paddingLeft="10dip"
                android:text="@string/itemno" />

            <RadioButton
                android:id="@+id/radio_Upc"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                android:button="@drawable/radiobutton_selector"
                android:checked="false"
                  android:drawablePadding="50dp"
    			android:paddingLeft="10dip"
                android:text="@string/upc" />
        </RadioGroup>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scroll_full_mlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mltScanType"
        android:layout_marginTop="16dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lay_fullTitle_mlt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="horizontal" >

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/itemNum"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/descr"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/from"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/to"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/require_quantity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/uomm"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/lst_mltfull"
                style="@style/ListViewAppTheme.White"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/lay_PO_mic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="41dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_mlt_Imp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mlt_Expo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mlt_Exit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mlt_New"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mlt_Save"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>