<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_green"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/txt_InvTitle"
        style="@style/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/invTitle" />

    <View
        android:id="@+id/txt_InvView"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/txt_InvTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#2E9AFE" />

    <LinearLayout
        android:id="@+id/invLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/txt_InvView"
         android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/txtLoc"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/location" />

        <Spinner
            android:id="@+id/sploc"
          	style="@style/SpinnerItemAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:editable="false" />
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/invScanType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invLocation"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edt_Search_mic"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight=".15"
            android:gravity="center"            
            android:hint="@string/scan" />

                 
        <RadioGroup
            android:id="@+id/radioScanBasedOn_mic"
            style="@style/RadioButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioInum_mic"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                 android:button="@drawable/radiobutton_selector"
                android:checked="true"
                  android:drawablePadding="50dp"
    			android:paddingLeft="10dip"
                android:text="@string/itemno" />

            <RadioButton
                android:id="@+id/radioNum_mic"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:button="@drawable/radiobutton_selector"
                android:checked="false"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                  android:drawablePadding="50dp"
    			android:paddingLeft="10dip"
                android:text="@string/manfno" />

            <RadioButton
                android:id="@+id/radioUpc_mic"
                style="@style/textRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:button="@drawable/radiobutton_selector"
                android:checked="false"
                android:layout_marginRight="5dp"
                android:layout_weight=".25"
                  android:drawablePadding="50dp"
    			android:paddingLeft="10dip"
                android:text="@string/upc" />
        </RadioGroup>
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/scroll_full_mic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/invScanType" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/lay_fullTitle_mic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/itemno"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/pick_seq"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/qoh"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/qc"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    style="@style/textRegular_list"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center|left"
                    android:text="@string/uom"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/lst_msefull_mic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/ListViewAppTheme.White" >
            </ListView>
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/lay_PO_mic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="41dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_OrderLstImport_mic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_OrderLstExport_mic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_OrderLstExit_mic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>