<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_green"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <TextView
        android:id="@+id/txtQtyUpdateTitle"
        style="@style/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/qtyupdate" >
    </TextView>

    <View
        android:id="@+id/viewQtyUpdateTitle"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#2E9AFE" />

    <LinearLayout
        android:id="@+id/layItemNo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"      
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mseShipItemNo_mic"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="left|center"
            android:text="@string/itemno" />

        <EditText
            android:id="@+id/edt_mseshipItemNo_mic"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layItemNo"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"   
        android:layout_marginTop="5dp"   
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mseshipQtyOrd_mic"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="left|center"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edt_mseshipQtyOrd_mic"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layUom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layDesc"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp" 
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mseshipuom_mic"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="left|center"
            android:text="@string/uom" />

        <EditText
            android:id="@+id/edt_mseshipuom_mic"
            style="@style/EditTextAppTheme_Scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:editable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layQtyCounted"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layItemNo"
        android:layout_gravity="center"
        android:layout_marginLeft="3dp"       
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_mseshipQtyShip_mic"
            style="@style/textRegular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/qc" />

        <EditText
            android:id="@+id/edt_shipShiped_mic"
            style="@style/EditTextAppTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_mseshipIncr_mic"
            style="@style/ImageButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:background="@drawable/up" />

        <Button
            android:id="@+id/btn_mseshipDecr_mic"
            style="@style/ImageButtonAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:background="@drawable/down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

          <Button
            android:id="@+id/btn_mseshipOk_mic"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />     
        <Button
            android:id="@+id/btn_mseshipCancel_mic"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

      
    </LinearLayout>

</LinearLayout>